# learn-burn

./: .gitignore  Cargo.toml  README.md  conda-init.yaml  setup-conda.sh
config/: train.json
src/: data.rs  dataset.rs  inference.rs  lib.rs  main.rs  model.rs  training.rs
